# GENUT_service

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  genut_service.db-shm  genut_service.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt
.playwright-mcp/: page-2026-06-15T07-43-32-369Z.yml  page-2026-06-15T07-44-47-841Z.yml  page-2026-06-15T07-45-17-363Z.yml  page-2026-06-15T07-45-36-873Z.yml  page-2026-06-15T07-45-42-627Z.yml  page-2026-06-15T07-46-12-255Z.yml  page-2026-06-15T07-46-33-910Z.yml  page-2026-06-15T07-47-00-771Z.yml  page-2026-06-15T07-47-14-935Z.yml  page-2026-06-15T07-47-27-380Z.yml  page-2026-06-15T07-47-40-637Z.yml  page-2026-06-15T07-48-02-068Z.yml  page-2026-06-15T07-48-21-078Z.yml  page-2026-06-15T07-48-42-271Z.yml  page-2026-06-15T07-48-59-221Z.yml
doc/: docker-architecture.md
frontend/: index.html  package-lock.json  package.json  status.html  tailwind.config.js  tsconfig.json  vite.config.ts
genut_service/: __init__.py  __main__.py  cli.py  config.py  enums.py  fs.py  main.py  paths.py  status_main.py  workspace.py
migrations/: env.py
tests/: conftest.py  test_auto_e2e.py  test_auto_product.py  test_auto_run_service.py  test_c_function_parser.py  test_cli.py  test_docker.py  test_docker_paths.py  test_e2e.py  test_env_builder.py  test_filetree.py  test_function_extractor.py  test_genuts_api.py  test_gerrit_patch.py  test_git_ops.py  test_health.py  test_job_delete.py  test_jobs_api.py  test_models.py  test_monitoring.py  test_process_registry.py  test_products_api.py  test_pull_code.py  test_run_command.py  (+13 more)
(+150 files in other folders)
