[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genut-service"
version = "0.1.0"
description = "Service for running GENUT in parallel across many target projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
postgres = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
genut-service = "genut_service.cli:main"

[tool.setuptools.packages.find]
include = ["genut_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not docker and not slow'"
markers = [
    "docker: tests that require Docker (skipped by default)",
    "slow: slow tests (skipped by default)",
]
